welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (vacation=true || weekday=true) {
                    ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vacation=true || weekday=true) {
        ^